--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "pypdf (>=5.4.0,<6.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
     "langchain-ollama (>=0.3.0,<0.4.0)",
-    "langchain-community (>=0.3.20,<0.4.0)"
+    "langchain-community (>=0.3.20,<0.4.0)",
+    "pydantic (>=2.11.0,<3.0.0)",
+    "langchain-chroma (>=0.2.2,<0.3.0)"
 ]
 
 [tool.poetry]
